--- a/style.css
+++ b/style.css
@@ -166,19 +166,19 @@ footer {
 }
 
 .block1{
-	border: solid;
+	border: dashed;
 	border-width: 1px;
-	background-color: rgba(223, 228, 234,1.0);
+	font-family: 'Montserrat', sans-serif;
 }
 
 .block2 {
-	border: solid;
+	border: dashed;
 	border-width: 1px;
-	background-color: rgba(223, 228, 234,1.0);
+	font-family: 'Montserrat', sans-serif;
 }
 
 .label {
-	background-color: rgba(164, 176, 190,0.5);
+	background-color: rgba(164, 176, 190,0.6);
 	border: solid;
 	border-width: 0.5px;
 
@@ -187,13 +187,13 @@ footer {
 .block3 {
 	width: 92.5%;
 	box-sizing: border-box;
-	border: solid;
+	border: dashed;
 	border-width: 1px;
-	background-color: rgba(223, 228, 234,1.0);
+	font-family: 'Montserrat', sans-serif;
 }
 
 .width_label {
-	width: 35%;
+	width: 40%;
 }
 
 @media (min-width: 992px){
@@ -207,7 +207,7 @@ footer {
 }
 
 .select_width {
-	width: 10.5%;
+	width: 25%;
 	margin-left: 31px;
 }
 
@@ -223,6 +223,26 @@ footer {
 }
 
 .ocean_background {
-	background: url(./media/ocean_background.jpg);
-	background-size: 100%;
+	background: url(./media/ocean_background.jpg) no-repeat;
+	background-size: cover;
+	margin: 0;
+	padding: 0;
+}
+
+.bg_container {
+	background-color: rgba(245, 246, 250,0.8);
+	padding-bottom: 3.5rem;
+	border-radius: 5%;
+
+}
+
+.margin_label_select {
+	margin-left: 31px;
+	width: 25%;
+}
+
+#formulaire_contact h1 {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 5rem;
+	letter-spacing: -5px;
 }
